--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -14,6 +14,7 @@
 }
 
 .hImg {
+  z-index: 10;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -23,7 +24,8 @@
   width: max-content;
 }
 
-.hImg img {
+.hImg {
+  z-index: 10;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -52,6 +54,7 @@
 }
 
 .awards p {
+  z-index: -1;
   font-size: 14px;
   color: #ddd;
   margin: 16px 0px;
@@ -63,6 +66,7 @@
 }
 
 .awardList img {
+  z-index: -1;
   width: 36px;
   height: 36px;
   padding: 8px;
@@ -84,7 +88,7 @@
   flex-direction: column;
   gap: 12px;
   padding: 16px;
-  background-color: #2f204e;
+  background-color: gray;
   border-bottom-right-radius: 10px;
 }
 
@@ -99,7 +103,7 @@
 }
 
 .followText {
-  background-color: #dd4c62;
+  background-color: #aaa;
   font-size: 12px;
   rotate: 90deg;
   width: max-content;
@@ -166,6 +170,7 @@
 .circleText {
   letter-spacing: 3px;
   font-size: 20px;
+  color: white;
 }
 
 .arrow {
