--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -2,6 +2,21 @@
   height: 100%;
   overflow: hidden;
   display: flex;
+  position: relative;
+}
+
+.scroller{
+  /* position: fixed; */
+  display: block;
+  font-size: 2rem;
+  width: 900px;
+  place-items: center;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(10px);
+  /* padding: 1.5rem; */
+  border-radius: 16px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .sSection {
@@ -10,10 +25,22 @@
   flex-direction: column;
   justify-content: center;
 }
+.sTitle1{
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  margin-top: 20px;
+  font-size: .3em;
+  color: #999;
+  font-weight: 500;
+}
 
 .sTitle {
-  font-size: 88px;
-  margin-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  font-size: 50px;
+  margin-bottom: 20px;
 }
 
 .serviceList {
@@ -26,7 +53,7 @@
   width: 50%;
   padding: 30px;
   border-radius: 20px;
-  background-color: #2f213f;
+  background-color: transparent;
   display: flex;
   align-items: center;
   gap: 16px;
@@ -59,7 +86,7 @@
 }
 
 .service:nth-child(1) .serviceIcon {
-  background-color: #dd4c62;
+  background-color: black;
 }
 .service:nth-child(2) .serviceIcon {
   background-color: #025656;
